--- a/index.html
+++ b/index.html
@@ -85,13 +85,11 @@ span {
   <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
   <a id="download" href="dld.html" target="myFrame">Download</a>	
 	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:400px; position:absolute;bottom:0px;left:-10px;overflow-y:hidden;"></iframe>
-	<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style="position:absolute:bottom:10px;left:120px;"/>
+	<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/>
 	</div>
-	<div id="header">
-	  <a type="action" class="btn btn-lg" style="margin-left:0px;">
-		 <span style="position:absolute;top:10px;left:15px;font-size:30px;" onclick="openNav()">&#9776;</span>
-		</a>
-	</div>	
+	<div id="header"><a type="action" class="btn btn-lg" style="margin-left:0px;">
+	<span style="position:absolute;top:10px;left:15px;font-size:30px;" onclick="openNav()">&#9776;</span>
+		</a></div>	
   <div id="app"></div>
 	<!--a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a-->		
 	<script>
