--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ span {
 	cursor:pointer;
 	color:#FFF;
 }
+	a {
+	
+	}	
 </style>
 </head>
 
@@ -80,11 +83,11 @@ span {
 <div id="mySidenav" class="sidenav">
 	<p style="position:absolute; top:0px;left:-60px;width:260px;">&nbsp;<em>EzMusic</em>
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
-	<a id="about" href="abt.hmtlr" target="myFrame">About</a>
-	<a id="social" href="fbIframe.html" target="myFrame">Social</a>	
-  <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
-  <a id="download" href="dld.html" target="myFrame">Download</a>	
-	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:400px; position:absolute;bottom:0px;left:-10px;overflow-y:hidden;"></iframe>
+	<a style="margin-top:-10px;" id="about" href="abt.hmtlr" target="myFrame">About</a>
+	<a style="margin-top:-10px;" id="social" href="fbIframe.html" target="myFrame">Social</a>	
+  <a style="margin-top:-10px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
+  <a style="margin-top:-10px;" id="download" href="dld.html" target="myFrame">Download</a>	
+	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:400px; position:absolute;bottom:0px;left:-3px;overflow-y:hidden;"></iframe>
 	<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/>
 	</div>
 	<div id="header"><a type="action" class="btn btn-lg" style="margin-left:0px;">
