--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body {
 	  text-shadow: 0 -1 rgba(0,0,0,.8);
 	  color:#ddd;
     transition: background-color.5s;
+	  overflow-y:hidden;
 }
 .sidenav {
     height: 100%;
@@ -87,7 +88,7 @@ span {
 	<!--img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/-->
 	</div>
 	<div id="header"><a type="action" class="btn btn-lg" style="margin-left:0px;">
-	<span style="position:absolute;top:0px;left:10px;font-size:30px;" onclick="openNav()">&#9776;</span>
+	<span style="position:absolute;top:0px;right:10px;font-size:30px;" onclick="openNav()">&#9776;</span>
 		</a></div>	
   <div id="app"></div>
 	<!--a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a-->		
