--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ span {
 <body>
 <div id="mySidenav" class="sidenav">
 	<p style="position:absolute; top:10px;left:-80px;width:260px;">&nbsp;<em>EzMusic</em>
-		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
+	<a style="position:absolute; top:10px;right:10px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
 	<a style="margin-top:-20px;margin-left:-6px;" id="about" href="abt.hmtlr" target="myFrame">About</a>
 	<a style="margin-top:-10px;margin-left:-6px;" id="social" href="fbIframe.html" target="myFrame">Social</a>	
   <a style="margin-top:-10px;margin-left:-6px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
@@ -88,7 +88,7 @@ span {
 	<!--img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/-->
 	</div>
 	<div id="header"><a type="action" class="btn btn-lg" style="margin-left:0px;">
-	<span style="position:absolute;top:0px;right:10px;font-size:30px;" onclick="openNav()">&#9776;</span>
+	<span style="position:absolute;top:0px;left:10px;font-size:30px;" onclick="openNav()">&#9776;</span>
 		</a></div>	
   <div id="app"></div>
 	<!--a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a-->		
