--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ span {
 
 <body>
 <div id="mySidenav" class="sidenav" style="overflow-y:hidden;">
-	<p style="position:absolute; top:10px;left:-80px;width:260px;">&nbsp;<em>EzMusic</em>
-	<a style="position:absolute; top:-30px;right:0px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
+	<p style="position:absolute; top:10px;left:-80px;width:260px;">&nbsp;<em style="color:#121212;">EzMusic</em>
+	<a style="position:absolute; top:-20px;right:-6px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
 	<a style="margin-top:-20px;margin-left:-46px;" id="about" href="abt.hmtlr" target="myFrame">About</a>
 	<a style="margin-top:-10px;margin-left:-46px;" id="social" href="fbIframe.html" target="myFrame">Social</a>	
   <a style="margin-top:-10px;margin-left:-46px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
@@ -87,7 +87,7 @@ span {
 	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:400px; position:absolute;bottom:0px;left:-3px;overflow-y:hidden;"></iframe>
 	<!--img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/-->
 	</div>
-	<div id="header"><a type="action" class="btn btn-lg" style="margin-left:0px;">
+	<div id="header"><a type="action" class="btn btn-lg" style="margin-top:6px;">
 	<span style="position:absolute;top:0px;left:10px;font-size:30px;" onclick="openNav()">&#9776;</span>
 		</a></div>	
   <div id="app"></div>
