--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@ span {
 	<a style="margin-top:-10px;margin-left:-40px;" id="social" href="fbIframe.html" target="myFrame">Social</a>	
   <a style="margin-top:-10px;margin-left:-40px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
   <a style="margin-top:-10px;margin-left:-40px;" id="download" href="dld.html" target="myFrame">Download</a>	
-	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:400px; position:absolute;bottom:-100px;left:-3px;overflow-y:hidden;"></iframe>
-	<!--img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/-->
+		<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/>
+	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:350px; position:absolute;bottom:-100px;left:-3px;overflow-y:hidden;"></iframe>
+
 	</div>
 	<div id="header"><a type="action" class="btn btn-lg" style="margin-top:6px;">
 	<span style="position:absolute;top:0px;left:10px;font-size:30px;" onclick="openNav()">&#9776;</span>
