--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@ span {
 
 <body>
 <div id="mySidenav" class="sidenav" style="overflow-y:hidden;">
-	<p style="position:absolute; top:10px;left:-72px;width:260px;">&nbsp;<em style="color:#121212;">EzMusic</em>
+	<p style="background-color:#FFF;position:absolute; top:10px;left:-72px;width:260px;">&nbsp;<em style="color:#121212;">EzMusic</em>
 	<a style="position:absolute; top:-20px;right:-6px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
-	<a style="margin-top:-20px;margin-left:-40px;" id="about" href="abt.hmtlr" target="myFrame">About</a>
-	<a style="margin-top:-10px;margin-left:-40px;" id="social" href="fbIframe.html" target="myFrame">Social</a>	
-  <a style="margin-top:-10px;margin-left:-40px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
   <a style="margin-top:-10px;margin-left:-40px;" id="download" href="dld.html" target="myFrame">Download</a>	
+  <a style="margin-top:-10px;margin-left:-40px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
+	<a style="margin-top:-20px;margin-left:-40px;" id="about" href="abt.hmtlr" target="myFrame">About</a>
 		<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/>
 	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:350px; position:absolute;bottom:-100px;left:-3px;overflow-y:hidden;"></iframe>
 
