--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ span {
 	<p style="background-color:#FFF;position:absolute; top:10px;left:-72px;width:260px;">&nbsp;<em style="color:#121212;">EzMusic</em>
 	<a style="position:absolute; top:-20px;right:-2px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
   <br>
-	<a style="margin-top:-20px;margin-left:-40px;" id="download" href="dld.html" target="myFrame">Download</a>	
+	<a style="margin-top:-20px;margin-left:-40px;" id="download" href="dl.html" target="myFrame">Download</a>	
   <a style="margin-top:-10px;margin-left:-40px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 	<a style="margin-top:-10px;margin-left:-40px;" id="about" href="abt.hmtlr" target="myFrame">About</a><br>
 		<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style="margin-left:-10px;"/><br><br>
@@ -95,8 +95,8 @@ span {
 	<!--a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a-->		
 	<script>
 function openNav() {
-    document.getElementById("mySidenav").style.width = "200px";
-    document.getElementById("main").style.marginLeft = "200px";
+    document.getElementById("mySidenav").style.width = "280px";
+    document.getElementById("main").style.marginLeft = "280px";
     document.body.style.backgroundColor = "rgba(0,0,0,0.6)";
 }
 
