--- a/index.html
+++ b/index.html
@@ -79,21 +79,20 @@ span {
 <body>
 <div id="mySidenav" class="sidenav" style="overflow-y:hidden;">
 	<p style="background-color:#FFF;position:absolute; top:10px;left:-72px;width:260px;">&nbsp;<em style="color:#121212;">EzMusic</em>
-	<a style="position:absolute; top:-20px;right:-2px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
+	<a style="position:absolute; top:-20px;left:260px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
   <br>
 	<a style="margin-top:-20px;margin-left:-40px;" id="download" href="dl.html" target="myFrame">Download</a>	
   <a style="margin-top:-10px;margin-left:-40px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 	<a style="margin-top:-10px;margin-left:-40px;" id="about" href="abt.hmtlr" target="myFrame">About</a><br>
-		<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style="margin-left:-10px;"/><br><br>
-	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:600px;margin-left:-10px;overflow-y:hidden;"></iframe>
-
+	<br>
+	<iframe src="fbIframe.html" name="myFrame" id="myFrame" style="border:0px;width:280px;height:600px;margin-left:-10px;overflow-y:hidden;"></iframe>
 	</div>
 	<div id="header"><a type="action" class="btn btn-lg" style="margin-top:6px;">
 	<span style="position:absolute;top:0px;left:10px;font-size:30px;" onclick="openNav()">&#9776;</span>
 		</a></div>	
   <div id="app"></div>
 	<!--a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a-->		
-	<script>
+	<script type="text/javascript">
 function openNav() {
     document.getElementById("mySidenav").style.width = "280px";
     document.getElementById("main").style.marginLeft = "280px";
