--- a/fbIframe.html
+++ b/fbIframe.html
@@ -19,7 +19,7 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
-<div class="fb-page" data-href="https://www.facebook.com/dcezmusic/" data-tabs="timeline" data-width="200" data-height="300" data-small-header="true" data-adapt-container-width="false" data-hide-cover="true" data-show-facepile="false">
+<div class="fb-page" data-href="https://www.facebook.com/dcezmusic/" data-tabs="timeline" data-width="300" data-height="350" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false">
 <blockquote cite="https://www.facebook.com/EzMusic/" class="fb-xfbml-parse-ignore">
 <a href="https://www.facebook.com/EzMusic/">EzMusic</a></blockquote></div>
   </body>
