--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ span {
 
 <body>
 <div id="mySidenav" class="sidenav" style="overflow-y:hidden;">
-	<a style="position:absolute; top:-10px;left:200px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	<a style="position:absolute; top:0px;left:200px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <!--br>
 	<a style="margin-top:-20px;margin-left:-40px;" id="download" href="dl.html" target="myFrame">Download</a>	
   <a style="margin-top:-10px;margin-left:-40px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 	<a style="margin-top:-10px;margin-left:-40px;" id="about" href="abt.hmtlr" target="myFrame">About</a><br-->
 	
-	<iframe src="fbIframe.html" name="myFrame" id="myFrame" width="300" height="500" style="border:0px;margin-left:-4px;overflow-y:hidden;"></iframe>
+	<iframe src="fbIframe.html" name="myFrame" id="myFrame" width="300" height="540" style="border:0px;overflow-y:hidden;"></iframe>
 	</div>
 	<div id="header"><a type="action" class="btn btn-lg" style="margin-top:6px;">
 	<span style="position:absolute;top:5px;left:10px;font-size:30px;" onclick="openNav()">&#9776;</span>
