--- a/dl.html
+++ b/dl.html
@@ -13,21 +13,18 @@ div {
 </head>
 <body>
 <div>
-    <b>You or your friends can scan this code 
-    <br>to have this app sent to your device!
-    <br>Or... you can also just tap on the
-    <br>code for a direct download</b><br><br>
-	<a id="qr" href="https://drive.google.com/uc?export=download&id=0B3sPmoNzzT_oSENOeHphOGZXU0E" style="">
-	<img src="QRdl.png" alt="Android_DL" width="200px" height="200px" style=""/></a>
+    <b>You can scan this code to have this 
+    <br>app sent to your device! Or you can
+    <br> also tap on the code to download
+    </b><br>
+	<a id="qr" href="http://bit.ly/2pdVH61" style="">
+	<img src="QRdl.png" alt="Android_DL" width="260px" height="260px" style=""/></a>
 </div>
-	  <br><br>
+	  <br>
 <div>     
-    <b>Here is a mini version for Windows!
-    <br>It's small size means it wont take up
-    <br>very much room and, it frees up your
-    <br>web browser for better 'surfing'</b><br><br>
-    <a id="winButton" href="https://drive.google.com/uc?export=download&id=0B3sPmoNzzT_oRUtwOVRXSDFDVzQ" style="">
-    <img src="WINdl.png" alt="Win32-64_DL" height="" width="200" /></a>
+    <b>Here is a mini version for Windows!</b><br>
+    <a id="winButton" href="http://bit.ly/2oa6OvW" style="">
+    <img src="WINdl.png" alt="Win32-64_DL" height="" width="260" /></a>
 </div> 
 </body>
 </html>
