--- a/dl.html
+++ b/dl.html
@@ -13,16 +13,16 @@ div {
 </head>
 <body>
 <div>
-    <b>You can scan this code to have this 
-    <br>app sent to your device! Or you can
-    <br> also tap on the code to download
+	<br>
+    <b>"Scan" or "Tap" this code download 
+    <br>our EzMusic android app!
     </b><br>
 	<a id="qr" href="http://bit.ly/2pdVH61" style="">
 	<img src="QRdl.png" alt="Android_DL" width="260px" height="260px" style=""/></a>
 </div>
 	  <br>
 <div>     
-    <b>Here is a mini version for Windows!</b><br>
+    <b>Here is the mini version for Windows!</b><br>
     <a id="winButton" href="http://bit.ly/2oa6OvW" style="">
     <img src="WINdl.png" alt="Win32-64_DL" height="" width="260" /></a>
 </div> 
