--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link href="https://github.com/lifeluvr/ezmusic/blob/gh-pages/public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
+  <link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
 <style type="text/css">
 body {
@@ -111,7 +111,7 @@ $(document).ready(function(){
 });
 </script>
 	
-	<script type="text/javascript" src="https://github.com/lifeluvr/ezmusic/blob/gh-pages/public/7febcca36d7e06875dc4.js"></script>
+	<script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
